4/14/2006 Bob Rossi <bob@brasko.net>

	* BRANCHES: Removed file.
	* TODO: Added, used to be RELEASE_TODO.
	* RELEASE_TODO: Removed.
	* FAQ: Quick fix.

4/14/2006 Bob Rossi <bob@brasko.net>

	* Removed all autoconf generated files from CVS.

4/13/2006 Bob Rossi <bob@brasko.net>

	* Makefile.am (SUBDIRS): Added gdbmi.
	* Makefile.in: Autogenerated.
	* configure: Autogenerated.
	* configure.in (AC_OUTPUT): Added gdbmi.

4/13/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Note about c89 conformance.

4/10/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Note about cgdb.txt being installed.
	* autorelease.sh: No longer run ht.pl.
	* ht.pl: Removed.

4/09/2006 Bob Rossi <bob@brasko.net>

	* release-todo.txt: Remove software requirement.

version 0.6.2 (09/04/2006):

4/09/2006 Bob Rossi <bob@brasko.net>

	* auto-release.sh: Update script.

4/09/2006 Bob Rossi <bob@brasko.net>

	* release-todo.txt: Remove software requirement.
	* auto-release.sh: New release script.

4/05/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Add note.

4/05/2006 Bob Rossi <bob@brasko.net>

	* release-todo.txt: Fix cgdb.1 step.

4/05/2006 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* aclocal.m4: Autogenerated.
	* config.h.in: Autogenerated.
	* configure: Autogenerated.
	* configure.in (VL_LIB_READLINE): Remove call. Configure readline
	using RL_LIB_READLINE_VERSION.
	(RL_LIB_READLINE_INCLUDES): Added.
	* config/readline_check_version.m4 (RL_LIB_READLINE_INCLUDES): Added.
	* various/Makefile.in: Autogenerated.

4/04/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Add comment.
	* configure: Autogenerated.
	* conifgure.in: Remove comments.
	* config/readline.m4: Remove termcap possibility.
	* config/readline_check_version.m4: Ditto.

3/29/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Add bug fix note.

3/14/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Add release note.

3/07/2006 Bob Rossi <bob@brasko.net>
    
	* configure.in (AC_INIT): Version update for CVS.
	* configure: Autogenerated.
