@@ -43,3 +43,9 @@ autoheader
 echo "-- Running automake"
 ################################################################################
 automake -a
+
+################################################################################
+echo "-- Generating autotool files for lib/gdbmi"
+################################################################################
+cd ./lib/gdbmi
+./autoregen.sh
